# blockmmo

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOY-AWS.md  Dockerfile  README.md  claim.html  coming-soon.html  index.html  landing.html  package-lock.json  package.json  server.js  vercel.json
.Jules/: palette.md
.aws/: README.md  github-oidc-trust-policy.json  setup.sh  task-definition.json  validate-workflow.sh
.claude/: launch.json
.github/: .lintignore
.jules/: bolt.md
api/: index.js
assets/: CREDITS.md
contracts/: .gitignore  Anchor.toml  BUILD.md  README.md
contracts/programs/runechain-character/: Cargo.toml
contracts/programs/runechain-character/src/: lib.rs
contracts/programs/runechain-settlement/: Cargo.toml
contracts/programs/runechain-settlement/src/: lib.rs
docs/: OPEN-ISSUES-PLAN.md  SIGNIN-SETUP.md
engine/: api.md  battlefield.js  mode.js  platformer.js  playground.html  turnbased.js
game/: account.js  agent-claim.js  announce.js  canon.js  chain.js  content.js  events.js  identity.js  oauth-google.js  overworld.js  season-validator.js  sha256.js  signin.js  wallet.js
models/: README.md
scripts/: ASSETS.md  create-github-issues.sh  gen-pixellab-assets.js  generate_badguy_assets.js  generate_pixel_assets.js  generate_placeholders.js  generate_region_tileset.js  import_assets.js  import_dropped_assets.js  import_pixellab_character.js  verify_account_binding.js  verify_act1_questline.js  verify_agent_claim.js  verify_area2_forks.js  verify_area3_auditor.js  verify_asset_integration.js  verify_auth_routes.js  (+26 more)
(+46 files in other folders)
