[package]
name = "runechain-settlement"
version = "0.1.0"
description = "RUNECHAIN real-money settlement (PRD F6): atomic 50/35/15 split + true SPL burn"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "runechain_settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
